<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main_1"
    tools:context="com.example.sfd.test_1.RegisterActivity">

    <EditText
        android:id="@+id/register_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:background="@drawable/et"
        android:textSize="20sp"
        android:hint="@string/register_name"
        android:inputType="textAutoComplete"
        android:ems="10"/>
    <EditText
        android:id="@+id/register_password_edit"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_below="@id/register_name_edit"
        android:layout_marginTop="30sp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="@drawable/et"
        android:hint="@string/register_password"
        android:inputType="numberDecimal"
        android:ems="10"/>
    <Button
        android:id="@+id/register_finish_button"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_below="@id/register_password_edit"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="@drawable/selecoor"
        android:text="@string/Register"/>
    <Button
        android:id="@+id/query_button"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_below="@id/register_finish_button"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="@drawable/selecoor"
        android:text="@string/query"/>

</RelativeLayout>
