<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50sp"
            android:src="@drawable/userphoto"
            android:layout_centerHorizontal="true"/>

        <!--        <TextView
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:gravity="center"
                android:textSize="50sp"
                android:text="@string/Login" />-->
        <!--<TextView-->
            <!--android:id="@+id/username_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_toLeftOf="@id/username_edit"-->
            <!--android:layout_below="@+id/user_photo"-->
            <!--android:textSize="20sp"-->
            <!--android:textColor="#000000"-->
            <!--android:text="@string/UserName"/>-->

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/user_photo"
            android:textSize="30sp"
            android:hint="@string/write_name"
            android:inputType="textPersonName"
            android:background="@drawable/et"
            android:ems="8"/>

        <!--<TextView-->
            <!--android:id="@+id/password_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_toLeftOf="@id/password_edit"-->
            <!--android:layout_marginTop="20sp"-->
            <!--android:textColor="#000000"-->
            <!--android:layout_below="@+id/username_edit"-->
            <!--android:textSize="20sp"-->
            <!--android:text="@string/PassWord"/>-->
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/username_edit"
            android:layout_marginTop="20sp"
            android:textSize="30sp"
            android:hint="@string/write_password"
            android:inputType="numberPassword"
            android:background="@drawable/et"
            android:ems="8"/>
        <Button
            android:id="@+id/enter_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/password_edit"
            android:layout_marginTop="20sp"
            android:background="@drawable/selecoor"
            android:layout_centerInParent="true"
            android:text="@string/Enter"/>
        <TextView
            android:id="@+id/notice_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_button"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="85sp"
            android:textSize="15sp"
            android:textColor="#ffff00"
            android:text="@string/no_account"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_button"
            android:layout_centerInParent="false"
            android:layout_alignBottom="@id/notice_text"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="235sp"
            android:textColor="#0000ff"
            android:background="@null"
            android:textSize="15sp"
            android:text="@string/Register"/>
    </RelativeLayout>

</LinearLayout>
